--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">PopularMovies</string>
+    <string name="no_movies">No books found</string>
+    <string name="action_sortBy">Sort by</string>
+
+
+    <string name="pref_number_of_columns_key" translatable="false">show_x_columns</string>
+    <string name="pref_sort_by_key" translatable="false">sort_by</string>
+
+    <string name="pref_sort_by_most_popular_default" translatable="false">popular</string>
+    <string name="pref_sort_by_highest_rated" translatable="false">top_rated</string>
 </resources>
