--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,41 @@
 <resources>
     <string name="app_name">PopularMovies</string>
-    <string name="no_movies">No books found</string>
-    <string name="action_sortBy">Sort by</string>
+    <string name="no_movies">No movies found</string>
 
+    //Main activity problem
+    <string name="no_connection">No internet connection</string>
+    <string name="no_connection_sub_text">Please fix your internet connection</string>
+    <string name="server_problem">Server not responding</string>
+    <string name="server_problem_sub_text">We will fix it as soon as possible</string>
+
+
+
+    //Detail activity
+    <string name="overview">Overview</string>
+    <string name="release_date">Release date:</string>
+    <string name="vote_average">Vote average:</string>
+
+
+
+    //Settings sort by
+    <string name="most_popular">Most popular</string>
+    <string name="highest_rated">Highest rated</string>
 
     <string name="pref_number_of_columns_key" translatable="false">show_x_columns</string>
     <string name="pref_sort_by_key" translatable="false">sort_by</string>
-
     <string name="pref_sort_by_most_popular_default" translatable="false">popular</string>
     <string name="pref_sort_by_highest_rated" translatable="false">top_rated</string>
+
+
+
+    //Settings menu
+    <string name="action_refresh">Refresh</string>
+    <string name="action_sortBy">Sort by</string>
+
+    <string name="view">View</string>
+    <string name="one_column">One column</string>
+    <string name="two_columns">Two columns</string>
+    <string name="three_columns">Three columns</string>
+    <string name="four_columns">Four columns</string>
+
 </resources>
