--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="overview">Overview</string>
     <string name="release_date">Release date:</string>
     <string name="vote_average">Vote average:</string>
+    <string name="reviews">Reviews</string>
+    <string name="trailers">Trailers</string>
 
 
 
@@ -55,6 +57,5 @@
 
     //Test
     <string name="middle">This is the middle!</string>
-
 
 </resources>
